# bm-25_search_engine_with_sentiment_filtering

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  dvc.yaml  mlflow.db  pyproject.toml  setup_pipeline.sh
.dvc/: config
bm-25_search_engine_with_sentiment_filtering/: README.md  pyproject.toml
bm-25_search_engine_with_sentiment_filtering/docs/: mkdocs.yml
bm-25_search_engine_with_sentiment_filtering/notebooks/: eda.ipynb
config/: config.yaml
config/data/: amzn.yaml  sent140.yaml
config/model/: bert.yaml  bm25.yaml
docs/docs/: index.md
models/: .gitignore  bert-sentiment-fold-1.dvc  bert-sentiment-fold-2.dvc  bert-sentiment-fold-3.dvc  bert-sentiment-fold-4.dvc  bert-sentiment-fold-5.dvc
notebooks/: Vectorization_Techinques.ipynb
src/: app.py  dataset.py  preprocessor.py
src/api/: api.py  main.py  schemas.py  state.py
src/modeling/: engine.py  get_models.py  train.py
src/pipelines/: build_index.py  evaluate.py  search.py  sentiment_inference.py  summarizer.py  test_pipeline_speed.py
