[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bm_25_search_engine_with_sentiment_filtering"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Mohamed Elgohary" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "~=3.13.0"

[tool.flit.module]
name = "src"

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

