[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bm_25_search_engine_with_sentiment_filtering"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Mohamed Elgohary" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "dvc>=3.67.1",
    "fastapi>=0.136.3",
    "hydra-core>=1.3.3",
    "ipython",
    "jupyterlab",
    "kagglehub>=1.0.2",
    "loguru",
    "matplotlib",
    "mkdocs",
    "mlflow>=3.13.0",
    "nltk>=3.9.4",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pyarrow>=24.0.0",
    "python-dotenv",
    "rank-bm25>=0.2.2",
    "ruff",
    "scikit-learn",
    "tqdm",
    "transformers>=5.11.0",
    "typer",
    "uvicorn>=0.49.0",
]
requires-python = "~=3.13.0"

[tool.flit.module]
name = "src"

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

